--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet"/>
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/gosling-app-sv/assets/favicon.17e50649.svg" />
     <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.3/dist/hglib.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gosling App SV</title>
-    <script type="module" crossorigin src="/assets/index.7c592c4b.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.95ce85ab.js">
-    <link rel="stylesheet" href="/assets/index.37f7ab6d.css">
+    <script type="module" crossorigin src="/gosling-app-sv/assets/index.7c592c4b.js"></script>
+    <link rel="modulepreload" href="/gosling-app-sv/assets/vendor.95ce85ab.js">
+    <link rel="stylesheet" href="/gosling-app-sv/assets/index.37f7ab6d.css">
   </head>
   <body>
     <div id="root"></div>
