--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet"/>
+    <!--
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet"/>
+    -->
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.3/dist/hglib.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gosling App SV</title>
   </head>
   <body>
-    <div id="root"></div>
+    <script>
+          // Many dependencies reference `Buffer` without the use of an
+          // import. Since Vite relies on ESM, these references aren't resolved
+          // and we get runtime errors. We could use something like `@rollup/plugin-inject`
+          // but this breaks sourcemaps at the moment.
+        var global = globalThis;
+        var Buffer = globalThis.Buffer; // referenced in many dependencies
+        var process = { platform: '', env: '' }
+    </script>
     <script type="module" src="/src/main.tsx"></script>
+    <div id="root"></div>
   </body>
 </html>
