fix: add global

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <body>
         <script>
             var process = { platform: '', env: '' };
+            var global = globalThis;
         </script>
         <script type="module" src="/src/main.tsx"></script>
         <div id="root"></div>
