chore: change favicon and title

--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <!--
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet"/>
-    -->
         <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
         <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.3/dist/hglib.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Gosling App SV</title>
+        <title>Cancer SV Browser</title>
     </head>
     <body>
         <script>
