feat: upgrade gosling.js

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+        <link rel="icon" type="image/x+icon" href="/src/favicon.ico" />
         <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.3/dist/hglib.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Cancer SV Browser</title>
@@ -14,5 +14,6 @@
         </script>
         <script type="module" src="/src/main.tsx"></script>
         <div id="root"></div>
+        <script src="https://bundle.run/buffer@6.0.3"></script>
     </body>
 </html>
