--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <script>
+            var Buffer = require('Buffer');
             var process = { platform: '', env: '' };
             var global = globalThis;
         </script>
