--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <script>
-            var Buffer = require('Buffer');
+            var Buffer = buffer.Buffer;
             var process = { platform: '', env: '' };
             var global = globalThis;
         </script>
