refactor: simplify demo selection

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x+icon" href="/src/favicon.ico" />
+        <link
+            href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900"
+            rel="stylesheet"
+            type="text/css"
+        />
         <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.3/dist/hglib.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Cancer SV Browser</title>
