--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x+icon" href="/src/favicon.ico" />
         <link
-            href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900"
+            href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900"
             rel="stylesheet"
             type="text/css"
         />
