fix: load fonts

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x+icon" href="/src/favicon.ico" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900"
+            href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400,100,300,500,700,900&display=swap"
             rel="stylesheet"
-            type="text/css"
         />
         <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.3/dist/hglib.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
