chore: add pubsub

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <title>GosCan</title>
     </head>
     <body>
+        <script src="https://unpkg.com/pubsub-js"></script>
         <script>
+            // const PubSub = require('pubsub-js');
             var process = { platform: '', env: '' };
             var global = globalThis;
         </script>
