feat: use a new name and domain

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         />
         <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.3/dist/hglib.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>SVELT</title>
+        <title>Chromoscope</title>
     </head>
     <body>
         <script>
