--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-J9K66SBQTM"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'G-J9K66SBQTM');
+        </script>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x+icon" href="/src/favicon.ico" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
