--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             }
             gtag('js', new Date());
 
-            gtag('config', 'G-J9K66SBQTM', { cookie_flags: 'SameSite=None;Secure' });
+            gtag('config', 'G-J9K66SBQTM', { cookie_flags: 'samesite=none;secure' });
         </script>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x+icon" href="/src/favicon.ico" />
